# EndlessRunner

./: .gitignore  Achievement.cpp  Achievement.h  AnimatedSprite.cpp  AnimatedSprite.h  CMakeLists.txt  CONSTANTS.h  Game.cpp  Game.h  Map.cpp  Map.h  Observer.cpp  Observer.h  Obstacle.cpp  Obstacle.h  ObstacleFactory.cpp  ObstacleFactory.h  Player.cpp  Player.h  State.h  StateGame.cpp  StateGame.h  StateGameOver.cpp  StateGameOver.h  StateMainMenu.cpp  StateMainMenu.h  Subject.cpp  Subject.h  Yoshi.cpp  Yoshi.h  main.cpp  saves.txt
SFML-2.5.1/doc/html/: Event_8hpp_source.html  Window_2Window_8hpp_source.html  Window_8hpp_source.html  annotated.html  classes.html  classsf_1_1Clipboard.html  classsf_1_1Event-members.html  classsf_1_1Event.html  classsf_1_1RenderTexture.html  classsf_1_1RenderWindow-members.html  classsf_1_1RenderWindow.html  classsf_1_1Window-members.html  classsf_1_1Window.html  deprecated.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval_c.html  functions_eval_g.html  functions_eval_j.html  functions_eval_k.html  functions_eval_l.html  functions_eval_m.html  functions_eval_r.html  functions_eval_s.html  functions_eval_t.html  functions_f.html  functions_g.html  functions_h.html  functions_j.html  functions_k.html  functions_l.html  functions_m.html  functions_p.html  functions_r.html  functions_s.html  (+34 more)
SFML-2.5.1/include/SFML/Graphics/: RenderTexture.hpp  RenderWindow.hpp
SFML-2.5.1/include/SFML/Window/: Event.hpp  (+2 more)
Tests/: CMakeLists.txt  main.cpp  test1.cpp
(+2 files in other folders)
