cmake_minimum_required(VERSION 3.15)
project(EndlessRunner)
set(CMAKE_CXX_STANDARD 20)
set(SFML_STATIC_LIBRARIES, TRUE)
set(SFML_DIR "SFML-2.5.1/lib/cmake/SFML")
find_package(SFML 2.5.1 COMPONENTS system window graphics audio REQUIRED)

add_subdirectory(Tests)
set(source_files Player.cpp Player.h Map.cpp Map.h CONSTANTS.h Obstacle.cpp Obstacle.h ObstacleFactory.cpp ObstacleFactory.h Game.cpp Game.h Observer.h Achievement.cpp Achievement.h Subject.cpp Subject.h State.h StateGame.cpp StateGame.h StateMainMenu.cpp StateMainMenu.h StateGameOver.cpp StateGameOver.h AnimatedSprite.cpp AnimatedSprite.h)
add_executable(EndlessRunner main.cpp)
add_library(core ${source_files})
target_link_libraries(core sfml-system sfml-window sfml-graphics sfml-audio)
target_link_libraries(EndlessRunner core)
